# smart-garden-gateway-boot-analyzer

./: Cargo.toml  README.md
.github/workflows/: main.yml
egui_logger/src/: lib.rs
src/: analyzer.rs  config.rs  jig.rs  lib.rs  main.rs
tests/: test_analyze.rs  test_analyzer.rs
tests/data/: button_stuck.toml  no_fdata.toml  no_issues.toml  no_nand.toml  no_phy.toml  no_u-boot.toml  no_u-boot_prompt.toml  wrong_ram_size.toml
