[package]
name = "smart-garden-gateway-doctor"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
egui = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = [
        "default_fonts",
        "glow",
        "persistence",
] }
egui_logger = { git = "https://github.com/husqvarnagroup/egui_logger.git", branch = "gardena/main" }
figment = { version = "0.10.11", features = ["toml"] }
log = "0.4.21"
serde = { version = "1.0.188", features = ["derive"] }
serialport = "4.2.2"
toml = "0.8.2"

[dev-dependencies]
mockall = "0.11.4"
rstest = "0.18.2"
serde = { version = "1.0.188", features = ["serde_derive"] }
test-log = "0.2.15"
toml = "0.8.0"
